--- a/configure.in
+++ b/configure.in
@@ -29,26 +29,7 @@ PKG_CHECK_MODULES(GTKMM,[gtkmm-2.4 >= 2.4.0],
 	[PKG_CHECK_MODULES(SIGC,[sigc++-2.0 >= 2.0.1])],
 	[PKG_CHECK_MODULES(GTKMM,[gtkmm-2.0 >= 1.3.20])])
 
-dnl LATEX stuff
-m4_include(latex.m4)
-
-AC_PROG_LATEX
-AC_LATEX_PACKAGE(helvetic,article,has_helvetic)
-if test "$has_helvetic" = "yes"
-then
-  AC_DEFINE(HAS_HELVETIC,[],[whether the latex installation has helvetic.sty])
-fi
-
-AC_MSG_CHECKING([for utf8x encoding in latex])
-_AC_LATEX_TEST([
-\documentclass{article}
-\usepackage[utf8x]{inputenc}
-\begin{document}
-\end{document}
-],has_utf8x)
-AC_MSG_RESULT_UNQUOTED([$has_utf8x])
-if test "$has_utf8x" = "yes"
-then AC_DEFINE(HAS_UTF8X, [], [whether the latex installation has encoding utf8x])
-fi
+#AC_CONFIG_SUBDIRS( searchcombo )
+#AM_CONDITIONAL(INSTALL_WIDGET, false )
 
 AC_OUTPUT(Makefile src/Makefile tests/Makefile tests/close_window/Makefile)
