working latex tests

--- a/configure.in
+++ b/configure.in
@@ -33,10 +33,18 @@ dnl LATEX stuff
 m4_include(latex.m4)
 
 AC_PROG_LATEX
-AC_LATEX_PACKAGE(helvetic,article,HELVETIC)
-if test "$HELVETIC" = "yes"
+AC_LATEX_PACKAGE(helvetic,article,has_helvetic)
+if test "$has_helvetic" = "yes"
 then
   AC_DEFINE(HAS_HELVETIC,[],[whether the latex installation has helvetic.sty])
 fi
+_AC_LATEX_TEST(changequote(<<, >>)dnl
+<<\documentclass{article}
+\usepackage[utf8x]{inputenc}
+\begin{document}
+\end{document}
+>>changequote([, ]),has_utf8x)
+
+echo $has_utf8x
 
 AC_OUTPUT(Makefile src/Makefile tests/Makefile tests/close_window/Makefile)
