dust off C++ wrappers - plain C searchcombo does not show the problem

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -35,12 +35,12 @@ gtkmm:
 
 SearchCombo.cc SearchCombo.h: gtkmm SearchCombo.hg SearchCombo.ccg
 	if [ ! -d private ] ; then mkdir private ; fi
-	echo perl -I$(GTKMMTOOLS)/pm $(GTKMMTOOLS)/gtkmmproc -I $(GTKMMTOOLS)/m4 --defs . SearchCombo . .
+#	echo perl -I$(GTKMMTOOLS)/pm $(GTKMMTOOLS)/gtkmmproc -I $(GTKMMTOOLS)/m4 --defs . SearchCombo . .
 	echo /usr/lib/glibmm-2.4/proc/gmmproc --defs . SearchCombo . .
 
 DoubleButton.cc DoubleButton.h: gtkmm DoubleButton.hg DoubleButton.ccg
 	if [ ! -d private ] ; then mkdir private ; fi
-	echo perl -I$(GTKMMTOOLS)/pm $(GTKMMTOOLS)/gtkmmproc -I $(GTKMMTOOLS)/m4 --defs . DoubleButton . .
+#	echo perl -I$(GTKMMTOOLS)/pm $(GTKMMTOOLS)/gtkmmproc -I $(GTKMMTOOLS)/m4 --defs . DoubleButton . .
 	echo /usr/lib/glibmm-2.4/proc/gmmproc --defs . DoubleButton . .
 
 gtksearchcombo.h gtksearchcombo.c doublebutton.c doublebutton.h \
