this way it does not work ...

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -5,7 +5,7 @@ SUBDIRS=close_window
 AM_CXXFLAGS=-I$(top_srcdir)/searchcombo/src -I$(top_srcdir)/src
 
 EXTRA_PROGRAMS = nsc_test sccont_test optionmenu db_test back_test \
-	callbackbuf wfr_test treeview treeview_tree
+	callbackbuf wfr_test treeview treeview_tree ComboBoxMapping
 
 back_test_SOURCES = back_test.cc db_embed.cc
 back_test_LDADD = $(top_srcdir)/src/libGtkmmAddons.a @GTKMM_LIBS@
@@ -33,6 +33,9 @@ treeview_tree_LDADD = $(top_srcdir)/src/libGtkmmAddons.a @GTKMM_LIBS@
 
 callbackbuf_SOURCES = callbackbuf.cc
 callbackbuf_LDADD = $(top_srcdir)/src/libGtkmmAddons.a @GTKMM_LIBS@
+
+ComboBoxMapping_SOURCES = ComboBoxMapping.cc
+ComboBoxMapping_LDADD = $(top_srcdir)/src/libGtkmmAddons.a @GTKMM_LIBS@
 
 INCLUDES = -I$(top_srcdir)/searchcombo/src -I$(top_srcdir)/src @GTKMM_CFLAGS@ 
 #AM_LDFLAGS = @GTKMM2_LDFLAGS@
