--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -5,7 +5,8 @@ SUBDIRS=close_window
 AM_CXXFLAGS=-I$(top_srcdir)/searchcombo/src -I$(top_srcdir)/src
 
 EXTRA_PROGRAMS = nsc_test sccont_test optionmenu db_test back_test \
-	callbackbuf wfr_test treeview treeview_tree ComboBoxMapping
+	callbackbuf wfr_test treeview treeview_tree ComboBoxMapping \
+	ec_test
 
 back_test_SOURCES = back_test.cc db_embed.cc
 back_test_LDADD = $(top_srcdir)/src/libGtkmmAddons.a @GTKMM_LIBS@
@@ -40,3 +41,5 @@ ComboBoxMapping_LDADD = $(top_srcdir)/src/libGtkmmAddons.a @GTKMM_LIBS@
 INCLUDES = -I$(top_srcdir)/searchcombo/src -I$(top_srcdir)/src @GTKMM_CFLAGS@ 
 #AM_LDFLAGS = @GTKMM2_LDFLAGS@
 
+ec_test_SOURCES = ec_test.cc
+ec_test_LDADD = $(top_srcdir)/src/libGtkmmAddons.a @GTKMM_LIBS@
