--- a/configure.ac
+++ b/configure.ac
@@ -32,10 +32,9 @@ AC_HEADER_STDC
 
 MPC_CHECK_BASE
 
-PKG_CHECK_MODULES(GTKMM,[gtkmm-3.0 >= 3.0.0],
-	[PKG_CHECK_MODULES(GTKMM,[gtkmm-2.4 >= 2.4.0],
+PKG_CHECK_MODULES(GTKMM,[gtkmm-2.4 >= 2.4.0],
 	[PKG_CHECK_MODULES(SIGC,[sigc++-2.0 >= 2.0.1])],
-	[PKG_CHECK_MODULES(GTKMM,[gtkmm-2.0 >= 1.3.20])])])
+	[PKG_CHECK_MODULES(GTKMM,[gtkmm-2.0 >= 1.3.20])])
 
 MPC_GTKMMADDONS_INCLUDES="$MPC_BASE_INCLUDES -I\$(top_srcdir)/src"   
 MPC_GTKMMADDONS_LDFLAGS="$MPC_BASE_LDFLAGS"
