use new naming schema for mpc components

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,15 +16,15 @@ DLL_LDADD=
 endif
 
 
-lib_LIBRARIES = libGtkmmAddons.a
-libGtkmmAddons_la_LIBADD=$(DLL_LDADD)
+lib_LIBRARIES = libManuProC_GtkmmAddons.a
+libManuProC_GtkmmAddons_la_LIBADD=$(DLL_LDADD)
 
 include_HEADERS = Gtk_OStream.h Message.h SearchCombo.h \
 		SearchComboContent.h gtksearchcombo.h \
 		TeX.h SelectMatching.h SigC2SlotEmu.h ja_nein_frage.hh \
 		ja_nein_frage_glade.hh
 
-libGtkmmAddons_a_SOURCES = Gtk_OStream_label.cc \
+libManuProC_GtkmmAddons_a_SOURCES = Gtk_OStream_label.cc \
 		 Gtk_OStream_optionmenu.cc Gtk_OStream_stream.cc \
 		 SearchCombo.cc TeX.cc Gtk_OStream.cc \
 		 gtksearchcombo.c Gtk_OStream_TreeView.cc \
