rename due to Windows name conflict

--- a/searchcombo/src/Makefile.am
+++ b/searchcombo/src/Makefile.am
@@ -8,4 +8,4 @@ lib_LIBRARIES = libGtkmmAddonsWidgets.a
 
 include_HEADERS = gtksearchcombo.h doublebutton.h
 
-libGtkmmAddonsWidgets_a_SOURCES = gtksearchcombo.c doublebutton.c
+libGtkmmAddonsWidgets_a_SOURCES = gtksearchcombo.c gtkdoublebutton.c
